# package-python-interview-seedtag

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: workflow.yaml
interview_seedtag/: __init__.py  _pytorch_classifier.py  _sklearn_classifier.py
model/: pytorch.model  sklearn.model
tests/: test_pytorch_classifier.py  test_sklearn_classifier.py
