[tool.poetry]
name = "interview-seedtag"
version = "0.1.1"
description = ""
authors = ["Ernesto Martínez del Pino <ernestomar1997@hotmail.com>"]
packages = [
    { include = "interview_seedtag" },
    { include = "model" },
    { include = "tests" }
]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "1.1.1"
torch = "1.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = {extras = ["toml"], version = "^6.3.2"}
flake8 = "^4.0.1"
flake8-bugbear = "^22.3.23"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 0

[[tool.poetry.source]]
name = "omnia"
url = "https://pypiserver.omniaintel.com"
secondary = true